--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -4,7 +4,7 @@
 
 <web-app>
   <display-name>Archetype Created Web Application</display-name>
-  <welcome-file-list>
-    <welcome-file>index.jsp</welcome-file>
-</welcome-file-list>
+	<welcome-file-list>  
+	   <welcome-file>ViewPage.jsp</welcome-file>   
+  </welcome-file-list>  
 </web-app>
