Refactored : Solved resource connection problems
I literally have no idea when it is working and when not

--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,7 @@
             <groupId>javax.servlet</groupId>
             <artifactId>servlet-api</artifactId>
             <version>3.0-alpha-1</version>
+            <scope>provided</scope>
         </dependency>
         <!-- JSON Object Handler -->
         <dependency>
