--- a/pom.xml
+++ b/pom.xml
@@ -38,7 +38,12 @@
 	      <artifactId>json-simple</artifactId>
 	      <version>1.1</version>
 	   </dependency>
-        
+        <!-- okhttp3 -->
+        <dependency>
+		    <groupId>com.squareup.okhttp3</groupId>
+		    <artifactId>okhttp</artifactId>
+		    <version>4.2.2</version>
+		</dependency>
   </dependencies>
   <build>
     <finalName>OnlineWebresume</finalName>
