Refactored : Fixed bugs

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
-/target/
-/src/test/
-/src/main/resources
+target/
+src/test/
+src/main/resources/
 *.class
 src/main/webapp/assets/response_leetcode_api_jun2_2_2022_sample.json
