--- a/pom.xml
+++ b/pom.xml
@@ -54,7 +54,7 @@
         <version>3.0.3</version>
         
         <configuration>
-        	<appName>sohams-online-web-resume</appName>
+        	<appName>sohams-web-portal</appName>
         	</configuration>
 		
       </plugin>
