--- a/pom.xml
+++ b/pom.xml
@@ -37,14 +37,10 @@
 	    <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-actuator</artifactId>
 </dependency>
-		<dependency>
-    <groupId>javax.servlet</groupId>
-    <artifactId>javax.servlet-api</artifactId>
-    <scope>provided</scope>
-</dependency>
 <dependency>
             <groupId>javax.servlet</groupId>
             <artifactId>jstl</artifactId>
+             <version>1.2</version>
             </dependency>
         <!-- javax servlet api -->
         <dependency>
