Fixed some issues
1. Changed name of page and font of component
2. Fixed problem of empty space on top

--- a/src/frontend/public/manifest.json
+++ b/src/frontend/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "SWP",
+  "name": "Web Portal for Soham's Info",
   "icons": [
     {
       "src": "favicon.ico",
