Added : Carousal for skill group processing

--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -17,6 +17,7 @@
     "react-circular-progressbar": "^2.1.0",
     "react-cookie": "^4.1.1",
     "react-dom": "^18.2.0",
+    "react-planet": "^1.0.1-ie11",
     "react-router-dom": "^5.3.0",
     "react-scripts": "5.0.1",
     "reactstrap": "^8.10.0",
